--- a/public/serveP.html
+++ b/public/serveP.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name ="viewport" content ="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <title>Document</title>
+    <title>我们的服务</title>
     <link rel="stylesheet" href="css/indexP.css"/>
     <link rel="stylesheet" href="css/swiper.min.css"/>
     <script src="js/jquery.min.js"></script>
