--- a/public/localNews.html
+++ b/public/localNews.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name ="viewport" content ="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <title>Document</title>
+    <title>北京资讯</title>
     <link rel="stylesheet" href="css/yindao.css"/>
     <script src="js/jquery.min.js"></script>
     <script src="js/note.js"></script>
@@ -53,7 +53,7 @@
         $("#wrapper1").css("top",bb);
         if (myScroll1 == undefined || myScroll1 == '') {
             myScroll1 = new IScroll('#wrapper1', {
-//                scrollbars: true,
+               scrollbars: true,
                 probeType: 3,//probeType属性，表明此插件，可以监听scroll事件
                 mouseWheel: true,
                 interactiveScrollbars: true,
