--- a/public/localNews.html
+++ b/public/localNews.html
@@ -74,28 +74,29 @@
                         maxY = this.maxScrollY - y,
                         downHasClass = downIcon.hasClass("reverse_icon"),
                         upHasClass = upIcon.hasClass("reverse_icon");
-
-                if (y >= 40) {
-                    //alert(">40")
-                    !downHasClass && downIcon.addClass("reverse_icon");
-                    return "";
-                } else if (y < 40 && y > -10) {
+                $("<span class='num'></span>").css("display","none").html(y).appendTo("body");
+                 var num=$(".num:first").html();
+                if(y<=num){
+                    $(".yindaoLogo").css("display","none");
+                    $(".yindaoWord").css("bottom","10%");
+                    $(".topLogo").css("top","-10%");
+                    $("#wrapper1").css("top",bb*0.5);
+                }else{
                     $(".topLogo").animate({"top":"0"},function(){
                         $(".yindaoLogo").css("display","block");
                         $(".yindaoWord").css("bottom","7%");
                         $("#wrapper1").css("top",bb);
                     })
+                }
+                if (y >= 40) {
+                    //alert(">40")
+                    !downHasClass && downIcon.addClass("reverse_icon");
+                    return "";
+                } else if (y < 40 && y > -10) {
                     downHasClass && downIcon.removeClass("reverse_icon");
                     return "";
                 }
-                if(y<-10&&y>-100){
-                    $(".yindaoLogo").css("display","none");
-                    $(".yindaoWord").css("bottom","10%");
-                    $(".topLogo").animate({"top":"-10%"},500);
-                    $("#wrapper1").css("top",bb*0.5);
-                }else{
-                    return;
-                }
+            
 
                 if (maxY >= 40) {
 
