--- a/public/localNews.html
+++ b/public/localNews.html
@@ -82,11 +82,11 @@
                     $(".topLogo").css("top","-10%");
                     $("#wrapper1").css("top",bb*0.5);
                 }else{
-                    $(".topLogo").animate({"top":"0"},function(){
+                        $(".topLogo").css("top","0");
                         $(".yindaoLogo").css("display","block");
                         $(".yindaoWord").css("bottom","7%");
                         $("#wrapper1").css("top",bb);
-                    })
+                    
                 }
                 if (y >= 40) {
                     //alert(">40")
