--- a/public/localNews.html
+++ b/public/localNews.html
@@ -135,6 +135,9 @@
                             var code=e['code'];
                             if(code==1){
                                 $("<div></div>").css({width:"100%",height:"20px",fontSize:"16px",textAlign:"center",lineHeight:"20px",marginTop:"10px"}).html("已加载到最新").insertBefore("li:first()");
+                                setTimeout(function(){
+                                    $("#tishi").remove();
+                                },3000)
                             }else{
                                 return
                             }
@@ -150,7 +153,7 @@
                                     //alert(true)
                                     //return;
                                     $("<li class='yindaoMain'></li>").attr("id","main"+i).insertBefore("li:first()");
-                                    $("<a></a>").attr("src",urls).attr("id","a"+i).appendTo("#main"+i);
+                                    $("<a></a>").attr("href",urls).attr("id","a"+i).appendTo("#main"+i);
                                     $("<div class='yindaoTitle'></div>").html(title).appendTo("#a"+i);
                                     $("<div class='yindaoForm'></div>").attr("id","form"+i).appendTo("#a"+i);
                                     $("<div class='yindaoForminner' style='margin-left: 0'></div>").html(pubName).appendTo("#form"+i);
@@ -221,7 +224,7 @@
                                     //alert(true)
                                     //return;
                                     $("<li class='yindaoMain'></li>").attr("id","maind"+is).insertAfter("li:last()");
-                                    $("<a></a>").attr("src",urls).attr("id","ad"+is).appendTo("#maind"+is);
+                                    $("<a></a>").attr("href",urls).attr("id","ad"+is).appendTo("#maind"+is);
                                     $("<div class='yindaoTitle'></div>").html(title).appendTo("#ad"+is);
                                     $("<div class='yindaoForm'></div>").attr("id","formd"+is).appendTo("#ad"+is);
                                     $("<div class='yindaoForminner' style='margin-left: 0'></div>").html(pubName).appendTo("#formd"+is);
