--- a/public/localNews.html
+++ b/public/localNews.html
@@ -134,15 +134,13 @@
                             var data=e['data'];
                             var code=e['code'];
                             if(code==1){
-                                $("<div></div>").css({width:"100%",height:"20px",fontSize:"16px",textAlign:"center",lineHeight:"20px",marginTop:"10px"}).html("已加载到最新").insertBefore("li:first()");
+                                $("<div id='tishi'></div>").css({width:"100%",height:"20px",fontSize:"16px",textAlign:"center",lineHeight:"20px",marginTop:"10px"}).html("已加载到最新").insertBefore("li:first()");
                                 setTimeout(function(){
                                     $("#tishi").remove();
                                 },3000)
-                            }else{
-                                return
-                            }
-                            $("<span class='first'></span>").css("display","none").html(data[0].pubTime).appendTo("body")
-                            for(var i=data.length-1;i>0;i--){
+                            }else if(code==0){
+                            $("<span class='first'></span>").css("display","none").html(data[0].pubTime).appendTo("body");
+                            for(var i=data.length-1;i>=0;i--){
 //                            alert(1)
                                 title=data[i].title;
                                 pubTime=data[i].pubTime;
@@ -186,7 +184,7 @@
                                         $("<div class='yindaoForminner'></div>").html(timeCha).appendTo("#form"+i);
                                     }
                                 }
-                            }
+                            }}
 
                             setTimeout(function () {
                                 myScroll1.refresh();
