--- a/public/search.html
+++ b/public/search.html
@@ -16,7 +16,7 @@
     <div class="nav">
         <div class="logoBox">
             <div class="logoBox1">
-                <img src="img/deep source-icon-web  .png">
+                <img src="img/deep.png">
             </div>
             <div class="logoBox2">
                 <img src="img/logoWord.png">
