--- a/public/search.html
+++ b/public/search.html
@@ -16,7 +16,7 @@
     <div class="nav">
         <div class="logoBox">
             <div class="logoBox1">
-                <img src="img/deep.png">
+                <img src="img/deep source-icon-web  .png">
             </div>
             <div class="logoBox2">
                 <img src="img/logoWord.png">
@@ -97,7 +97,11 @@
 
 <form action="" class="sForm">
     <input type="text" class="sInput" value=""/>
-    <div class="sButton"></div>
+    <div class="sButton">
+        <div id="test">
+            　　<img src="img/rotate.png" id="change"/>
+        </div>
+    </div>
 </form>
 <form action="" class="searchForm">
     <input type="search" class="searchInput"/>
@@ -109,6 +113,11 @@
         <img src="imgPhone/buttonClose.png">
     </div>
 </form>
+<div class="phoneTest">
+    <img src="img/phoneRotate.png" id="phoneChange">
+</div>
+<div class="phoneWait">正在努力搜索...</div>
+<div class="wait">搜索中，请稍后...</div>
 <div class="mainOutbox"></div>
 <!--<ul class="sMainbox">-->
     <!--<li>-->
