--- a/public/search.html
+++ b/public/search.html
@@ -106,15 +106,15 @@
 <form action="" class="searchForm">
     <input type="search" class="searchInput"/>
     <div id="back">取消</div>
-    <div class="searchIcon">
+    <!-- <div class="searchIcon">
         <img src="imgPhone/phoneButton.png">
-    </div>
+    </div> -->
     <div class="searchClose">
         <img src="imgPhone/buttonClose.png">
     </div>
 </form>
 <div class="phoneTest">
-    <img src="img/phoneRotate.png" id="phoneChange">
+    <!-- <img src="img/phoneRotate.png" id="phoneChange"> -->
 </div>
 <div class="phoneWait">正在努力搜索...</div>
 <div class="wait">搜索中，请稍后...</div>
