--- a/public/indexP.html
+++ b/public/indexP.html
@@ -237,12 +237,12 @@
         </a></li>
     </ul>
     <form class="phoneSearchbox">
-        <input type="text" class="phoneInput"/>
+        <input type="text" class="phoneInput" placeholder="全网资讯 一键搜索"/>
         <div class="placeBox">
             <div class="placeaIcon">
                 <img src="imgPhone/phoneButton.png">
             </div>
-            <div class="placeWord">全网资讯 一键搜索</div>
+            <!-- <div class="placeWord">全网资讯 一键搜索</div> -->
         </div>
         <div class="buttonIcon">
             <img src="imgPhone/phoneButton.png">
