--- a/public/indexP.html
+++ b/public/indexP.html
@@ -267,8 +267,7 @@
             $(".buttonIcon").css("display","none");
             $(".buttonClose").css("display","none");
         })
-$("input").keydown(function(){
-    $(".inputs").val("");
+$("input").focus(function(){
     window.location="search.html";
 })
     })
