--- a/public/search.html
+++ b/public/search.html
@@ -56,42 +56,42 @@
     </div>
     <div class="btnP"></div>
 </div>
-<ul class="navP">
-    <li><a href="indexP.html">
-        <div class="iconP">
+<ul class="navP" style="top:50px">
+    <li style="height: 50px"><a href="indexP.html">
+        <div class="iconP" style="width: 25px;height:25px">
             <img src="imgPhone/icon1.png">
         </div>
-        <div class="navWord">首页</div>
+        <div class="navWord" style="font-size: 16px">首页</div>
     </a></li>
-    <li><a href="mainP.html">
-        <div class="iconP">
+    <li style="height: 50px"><a href="mainP.html">
+        <div class="iconP" style="width: 25px;height:25px">
             <img src="imgPhone/icon2.png">
         </div>
-        <div class="navWord">我们的服务</div>
+        <div class="navWord" style="font-size: 16px">我们的服务</div>
     </a></li>
-    <li><a href="">
-        <div class="iconP">
+    <li style="height: 50px"><a href="Web2/index.html">
+        <div class="iconP" style="width: 25px;height:25px">
             <img src="imgPhone/icon3.png">
         </div>
-        <div class="navWord">应用案例</div>
+        <div class="navWord" style="font-size: 16px">应用案例</div>
     </a></li>
-    <li><a href="project.html">
-        <div class="iconP">
+    <li style="height: 50px"><a href="bokeP.html">
+        <div class="iconP" style="width: 25px;height:25px">
             <img src="imgPhone/icon5.png">
         </div>
-        <div class="navWord">团队博客</div>
+        <div class="navWord" style="font-size: 16px">团队博客</div>
     </a></li>
-    <li><a href="project.html">
-        <div class="iconP">
+    <li style="height: 50px"><a href="joinP.html">
+        <div class="iconP" style="width: 25px;height:25px">
             <img src="imgPhone/icon6.png">
         </div>
-        <div class="navWord">加入我们</div>
+        <div class="navWord" style="font-size: 16px">加入我们</div>
     </a></li>
-    <li><a href="callP.html">
-        <div class="iconP">
+    <li style="height: 50px"><a href="callP.html">
+        <div class="iconP" style="width: 25px;height:25px">
             <img src="imgPhone/icon4.png">
         </div>
-        <div class="navWord">联系我们</div>
+        <div class="navWord" style="font-size: 16px">联系我们</div>
     </a></li>
 </ul>
 
