--- a/public/callP.html
+++ b/public/callP.html
@@ -41,7 +41,7 @@ var _hmt = _hmt || [];
                 <div class="sanjiao" ></div>
                 <div class="underline"></div>
             </a></li>
-            <li><a href="Web2/index.html">应用案例
+            <li><a href="localNews.html">应用案例
                 <div class="sanjiao"></div>
                 <div class="underline"></div>
             </a></li>
@@ -86,7 +86,7 @@ var _hmt = _hmt || [];
         </div>
         <div class="navWord">我们的服务</div>
     </a></li>
-    <li><a href="Web2/index.html">
+    <li><a href="localNews.html">
         <div class="iconP">
             <img src="imgPhone/icon3.png">
         </div>
