--- a/public/mainP.html
+++ b/public/mainP.html
@@ -35,7 +35,7 @@ var _hmt = _hmt || [];
         </div>
         <div class="navWord">我们的服务</div>
     </a></li>
-    <li><a href="Web2/index.html">
+    <li><a href="localNews.html">
         <div class="iconP">
             <img src="imgPhone/icon3.png">
         </div>
