--- a/public/serveP.html
+++ b/public/serveP.html
@@ -43,7 +43,7 @@
                 <div class="sanjiao" ></div>
                 <div class="underline"></div>
             </a></li>
-            <li><a href="Web2/index.html">应用案例
+            <li><a href="localNews.html">应用案例
                 <div class="sanjiao"></div>
                 <div class="underline"></div>
             </a></li>
