--- a/public/bokeP.html
+++ b/public/bokeP.html
@@ -32,7 +32,7 @@
                 <div class="sanjiao" ></div>
                 <div class="underline"></div>
             </a></li>
-            <li><a href="Web2/index.html">应用案例
+            <li><a href="localNews.html">应用案例
                 <div class="sanjiao"></div>
                 <div class="underline"></div>
             </a></li>
@@ -322,7 +322,7 @@
             </div>
             <div class="navWord">我们的服务</div>
         </a></li>
-        <li><a href="Web2/index.html">
+        <li><a href="localNews.html">
             <div class="iconP">
                 <img src="imgPhone/icon3.png">
             </div>
