--- a/public/search.html
+++ b/public/search.html
@@ -35,7 +35,7 @@
                 <div class="sanjiao" ></div>
                 <div class="underline"></div>
             </a></li>
-            <li><a href="Web2/index.html">应用案例
+            <li><a href="localNews.html">应用案例
                 <div class="sanjiao"></div>
                 <div class="underline"></div>
             </a></li>
@@ -69,7 +69,7 @@
         </div>
         <div class="navWord" style="font-size: 15px">我们的服务</div>
     </a></li>
-    <li style="height: 45px"><a href="Web2/index.html">
+    <li style="height: 45px"><a href="localNews.html">
         <div class="iconP" style="width: 22px;height:22px">
             <img src="imgPhone/icon3.png">
         </div>
