--- a/public/news.html
+++ b/public/news.html
@@ -7,8 +7,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <title>头条百家</title>
     <script src="js/jquery.min.js"></script>
-    <script src="js/index12.js"></script>
-    <link rel="stylesheet" href="css/index3.css"/>
+    <script src="js/ex.js"></script>
+    <link rel="stylesheet" href="css/ex.css"/>
 </head>
 <body style="background:#e7e7e7;">
 <div class="banner">
