--- a/public/news.html
+++ b/public/news.html
@@ -10,147 +10,34 @@
     <script src="js/ex.js"></script>
     <link rel="stylesheet" href="css/ex.css"/>
 </head>
-<body style="background:#e7e7e7;">
-<div class="banner">
-    <img src="img/guanggao.png" id="bannerImg">
+<body>
+<div class="banner" style="top:25px">
     <div class="yingdao">
         <img src="img/tishi.png">
     </div>
     <div class="bannerzhe">
-    <span class="bannertitle"></span>
-    <div class="bannertime">
-        <span class="date"></span>
-        <!--<span class="time"></span>-->
-        <!--<span class="wendu">-->
-            <!--<img src="img/wendu.png"/>-->
-            <!--<span class="wenduword">3456</span>-->
-        <!--</span>-->
-    </div>
+        <span class="bannertitle"></span>
+        <div class="bannertime">
+            <span class="date"></span>
+            <span class="time"></span>
         </div>
+    </div>
 </div>
 <!--banner end-->
 <div class="cardbox">
-    <!--<div class="card1">头条百家简介：头条百家是今日头条的必备伴侣。你可以将今日头条/一点资讯等平台的资讯添加到头条百家的资讯专辑。头条百家帮助你智能挖掘来自微博/谷歌/知乎的最新资讯观点。</div>-->
-    <!--<div class="card2">章鱼FM依然是一个电台章鱼FM依然是一个电台章鱼FM依然是一个电台章鱼FM依然是一个电台</div>-->
 </div>
-
-<!--card end-->
-<!--<div class="pinglun">-->
-    <!--<div class="pingluntop">-->
-        <!--<img src="img/pinglun.png" >-->
-    <!--</div>-->
-    <!--<div class="pinglunbox">-->
-        <!--<div class="pingluncard" style="margin-top:0">-->
-
-            <!--<div class="pinglunword">-->
-                <!--<span class="pingluntitle">-->
-                    <!--<div class="pinglunperson">-->
-                        <!--<img src="img/guanggao.png" style="height: 100%">-->
-                    <!--</div>-->
-                    <!--<div class="pinglunname">紫嫣</div>-->
-                <!--</span>-->
-                <!--<span class="pingluncon"><div class="pinglunw"></div><div class="plconword">也许有很多bug</div></span>-->
-                <!--<div class="pinglunline"></div>-->
-            <!--</div>-->
-        <!--</div>-->
-        <!--<div class="pingluncard">-->
-
-            <!--<div class="pinglunword">-->
-                <!--<span class="pingluntitle"><div class="pinglunperson"></div><div class="pinglunname">紫嫣</div></span>-->
-                <!--<span class="pingluncon"><div class="pinglunw"></div><div class="plconword">也许有很多bug</div></span>-->
-                <!--<div class="pinglunline"></div>-->
-            <!--</div>-->
-        <!--</div>-->
-        <!--<div class="pingluncard">-->
-
-            <!--<div class="pinglunword">-->
-                <!--<span class="pingluntitle"><div class="pinglunperson"></div><div class="pinglunname">紫嫣</div></span>-->
-                <!--<span class="pingluncon"><div class="pinglunw"></div><div class="plconword">也许有很多bug</div></span>-->
-                <!--<div class="pinglunline"></div>-->
-            <!--</div>-->
-        <!--</div>-->
-        <!--<div class="pingluncard">-->
-
-            <!--<div class="pinglunword">-->
-                <!--<span class="pingluntitle"><div class="pinglunperson"></div><div class="pinglunname">紫嫣</div></span>-->
-                <!--<span class="pingluncon"><div class="pinglunw"></div><div class="plconword">也许有很多bug</div></span>-->
-                <!--<div class="pinglunline"></div>-->
-            <!--</div>-->
-        <!--</div>-->
-        <!--<div class="pingluncard">-->
-
-            <!--<div class="pinglunword">-->
-                <!--<span class="pingluntitle"><div class="pinglunperson"></div><div class="pinglunname">紫嫣</div></span>-->
-                <!--<span class="pingluncon"><div class="pinglunw"></div><div class="plconword">也许有很多bug</div></span>-->
-                <!--&lt;!&ndash;<div class="pinglunline"></div>&ndash;&gt;-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-    <!--<div class="pinglunfoot">打开头条百家 查看更多评论</div>-->
-<!--</div>-->
-<!--pinglun end-->
-<!--<div class="pinglun">-->
-    <!--<div class="pingluntop">-->
-        <!--<img src="img/point.png">-->
-    <!--</div>-->
-    <!--<div class="pointcard">-->
-        <!--<div class="pointtu">-->
-            <!--<img src="img/guanggao.png" style="height: 100%">-->
-        <!--</div>-->
-        <!--<div class="pointword">阿里回应售假：诉求无意义将强力反击</div>-->
-        <!--<div class="pointsword">中国新闻网</div>-->
-    <!--</div>-->
-    <!--<div class="pointcard">-->
-        <!--<div class="pointtu"></div>-->
-        <!--<div class="pointword">阿里回应售假：诉求无意义将强力反击</div>-->
-        <!--<div class="pointsword">中国新闻网</div>-->
-    <!--</div>-->
-    <!--<div class="pointcard">-->
-        <!--<div class="pointtu"></div>-->
-        <!--<div class="pointword">阿里回应售假：诉求无意义将强力反击</div>-->
-        <!--<div class="pointsword">中国新闻网</div>-->
-    <!--</div>-->
-<!--</div>-->
-<!--<div class="pinglun">-->
-    <!--<div class="pingluntop">-->
-        <!--<img src="img/guanzhu.png">-->
-    <!--</div>-->
-    <!--<div class="pointcard">-->
-        <!--<div class="pointtu"></div>-->
-        <!--<div class="pointword">阿里回应售假：诉求无意义将强力反击</div>-->
-        <!--<div class="pointsword">中国新闻网</div>-->
-    <!--</div>-->
-    <!--<div class="pointcard">-->
-        <!--<div class="pointtu"></div>-->
-        <!--<div class="pointword">阿里回应售假：诉求无意义将强力反击</div>-->
-        <!--<div class="pointsword">中国新闻网</div>-->
-    <!--</div>-->
-    <!--<div class="pointcard">-->
-        <!--<div class="pointtu"></div>-->
-        <!--<div class="pointword">阿里回应售假：诉求无意义将强力反击</div>-->
-        <!--<div class="pointsword">中国新闻网</div>-->
-    <!--</div>-->
-<!--</div>-->
-<!--point end-->
-<div class="footimg">
-     <a href="" id="footertu"><img src="img/downloadbottom.png"></a>
-</div>
-<!--<footer>-->
-    <div class="footer">
-        <div class="footertu">
-            <img src="img/logo.png">
-        </div>
-        <div class="footerword">
-            <div class="bigword">头条百家</div>
-            <div class="sword">今日头条 百家争鸣</div>
-        </div>
-        <div class="download">
-            <a href="" id="download"><img src="img/download.png"></a>
-        </div>
-        <div class="close">
-            <img src="img/close.png">
-        </div>
+<div class="footer">
+    <div class="footertu">
+        <img src="img/logoS.png">
     </div>
+    <div class="footerword">
+        <div class="bigword">奇点资讯</div>
+        <div class="sword">读奇点 阅天下</div>
+    </div>
+    <div class="download">
+        <a href="" id="download">下载App</a>
+    </div>
+</div>
 <div class="zhezhao">
     <div class="zhezhaodownload">
         <!--<span>请下载我们的应用立即体验</span>-->
@@ -165,7 +52,6 @@
         </div>
     </div>
 </div>
-<!--</footer>-->
 </body>
 </html>
 
