change download css

--- a/public/news.html
+++ b/public/news.html
@@ -56,9 +56,11 @@ $("body").on("touchmove", function(e) {
         <div class="bigword">奇点资讯</div>
         <div class="sword">读奇点 阅天下</div>
     </div>
-    <div class="download">
-        <a href="" id="download">下载App</a>
-    </div>
+    <a href="" id="download">
+            <div class="download">
+            下载App
+            </div>
+        </a>
 </div>
 <div class="zhezhao">
     <div class="zhezhaodownload">
