--- a/public/search.html
+++ b/public/search.html
@@ -118,6 +118,7 @@
 </div>
 <div class="phoneWait">正在努力搜索...</div>
 <div class="wait">搜索中，请稍后...</div>
+<div class="wait1">请稍后重试</div>
 <div class="mainOutbox"></div>
 <!--<ul class="sMainbox">-->
     <!--<li>-->
