change web word

--- a/public/serveP.html
+++ b/public/serveP.html
@@ -241,7 +241,7 @@
         <div class="card1Box pad swiper-slide" style="background:#6cc1fb;width:62.5%">
             <div class="icon5Box">
                 <div id="icon5"></div>
-                <span class="cWord1">大数据服务</span>
+                <span class="cWord1">机器学习引擎</span>
                 <span class="cWord2">大数据为你筛选潜在客户</span>
             </div>
             <div class="imgA">
@@ -303,7 +303,7 @@
         <div class="card1Box pad swiper-slide" style="background:#6cc1fb;width:62.5%">
             <div class="icon5Box">
                 <div id="icon51"></div>
-                <span class="cWord1">大数据服务</span>
+                <span class="cWord1">机器学习引擎</span>
                 <span class="cWord2">大数据为你推荐精选商品</span>
             </div>
             <div class="imgA">
@@ -363,7 +363,7 @@
         <div class="card1Box pad swiper-slide" style="background:#6cc1fb;width:62.5%">
             <div class="icon5Box">
                 <div id="icon52"></div>
-                <span class="cWord1">大数据服务</span>
+                <span class="cWord1">机器学习引擎</span>
                 <span class="cWord2">大数据为你提供决策服务</span>
             </div>
             <div class="imgA">
