--- a/public/indexP.html
+++ b/public/indexP.html
@@ -27,7 +27,7 @@
                 <img src="img/deep.png">
             </div>
             <div class="logoBox2">
-                <img src="img/logoWord.png">
+                <span>深源互动——人工智能你的商业外脑</span>
             </div>
             
         </div>
@@ -59,7 +59,7 @@
     </div>
     <div class="bannerBox">
         <img src="img/bannerweb.png">
-        <div class="bannerWord1"><img src="img/bw3.png"></div>
+        <div class="bannerWord1">用<span>机器智能</span>增强<span>商业应用</span></div>
         <!--<div class="bannerWord2"></div>-->
         <!--<div class="shuju">实时精选数据：<span>2346153222</span>条</div>-->
         <form action="" class="forms">
@@ -69,20 +69,20 @@
     </div>
 </div>
 <div class="mainBox">
-    <div class="serve">我们的服务</div>
+    <div class="serve">深源互动平台</div>
     <div id="underline"></div>
     <!--<div class="mainWord">深源互动平台是基于分布式计算的数据获取和数据分析平台，结合独特的语义分析技术, 一站式满足用户词性分析，实体识别，句子压缩，文章摘要</div>-->
     <!--<div class="mainWord" style="width:90%">提取，文本分类，文本聚类，情感分析，关键词提取等自然语言处理功能API，同时提供全网数据抓取，可定制数据抓取服务。用户能够基</div>-->
     <!--<div class="mainWord" style="width:85%">于本平台提供的API实现搜索、推荐、舆情分析、定向挖掘等高级应用，也能够与我们合作定制具有产品特色的语义分析解决方案。</div>-->
-    <p class="mainWord">深源互动平台是基于分布式计算的数据获取和数据分析平台，结合独特的语义分析技术, 一站式满足用户词性分析，实体识别，句子压缩，文章摘要提取，文本分类，文本聚类，情感分析，关键词提取等自然语言处理功能API，同时提供全网数据抓取，可定制数据抓取服务。用户能够基于本平台提供的API实现搜索、推荐、舆情分析、定向挖掘等高级应用，也能够与我们合作定制具有产品特色的语义分析解决方案。</p>
+    <p class="mainWord">无限想象&nbsp;&nbsp;多维推理&nbsp;&nbsp;深度交互</p>
 
     <div class="iconBox">
         <div class="iconInner">
-            <a href="servsTest.html#5" style="width:105px"><img src="img/icon1.png"></a>
+            <a href="serveP.html#1" style="width:105px"><img src="img/icon1.png"></a>
             <div class="iconWord1">深度订阅</div>
             <div class="iconWord2">追踪热点事件</div>
             <div class="tiyanBox">
-                <a href="">
+                <a href="serveP.html#1">
                     <span class="tiyan">立即体验</span>
                     <img src="img/jiantou.png">
                 </a>
@@ -93,18 +93,18 @@
             <div class="iconWord1">句级别的内容聚类</div>
             <div class="iconWord2">精确到一句话的同类内容聚合</div>
             <div class="tiyanBox">
-                <a href="">
+                <a href="serveP.html#2">
                     <span class="tiyan">立即体验</span>
                     <img src="img/jiantou.png">
                 </a>
             </div>
         </div>
         <div class="iconInner">
-            <a href=""><img src="img/icon3.png"></a>
+            <a href="serveP.html#3"><img src="img/icon3.png"></a>
             <div class="iconWord1">核心观点抽取</div>
             <div class="iconWord2">抽取长篇大论的中心思想</div>
             <div class="tiyanBox">
-                <a href="">
+                <a href="serveP.html#3">
                     <span class="tiyan">立即体验</span>
                     <img src="img/jiantou.png">
                 </a>
@@ -114,20 +114,20 @@
     </div>
     <div class="iconBox">
         <div class="iconInner">
-            <a href=""><img src="img/icon4.png"></a>
+            <a href="serveP.html#4"><img src="img/icon4.png"></a>
             <div class="iconWord1">自动生成文章概要</div>
             <div class="iconWord2">让阅读更加简洁明了</div>
-            <div class="tiyanBox"><a href="">
+            <div class="tiyanBox"><a href="serveP.html#4">
                 <span class="tiyan">立即体验</span>
                 <img src="img/jiantou.png">
             </a></div>
         </div>
         <div class="iconInner">
-            <a href=""><img src="img/icon5.png"></a>
-            <div class="iconWord1">大数据服务</div>
+            <a href="serveP.html#5"><img src="img/icon5.png"></a>
+            <div class="iconWord1">机器学习引擎</div>
             <div class="iconWord2">数据连接你与世界</div>
             <div class="tiyanBox">
-                <a href="">
+                <a href="serveP.html#5">
                     <span class="tiyan">立即体验</span>
                     <img src="img/jiantou.png">
                 </a>
@@ -136,11 +136,11 @@
 
 
         <div class="iconInner">
-            <a href=""><img src="img/icon6.png"></a>
+            <a href="serveP.html#6"><img src="img/icon6.png"></a>
             <div class="iconWord1">融合搜索服务</div>
             <div class="iconWord2">全网中英文资讯搜索</div>
             <div class="tiyanBox">
-                <a href="">
+                <a href="serveP.html#6">
                     <span class="tiyan">立即体验</span>
                     <img src="img/jiantou.png">
                 </a>
@@ -149,11 +149,11 @@
     </div>
     <div class="iconBox">
         <div class="iconInner">
-            <a href=""><img src="img/icon7.png"></a>
+            <a href="serveP.html#7"><img src="img/icon7.png"></a>
             <div class="iconWord1">内容平台</div>
             <div class="iconWord2">挖掘重组内容，赋予其更高价值</div>
             <div class="tiyanBox">
-                <a href="">
+                <a href="serveP.html#7">
                     <span class="tiyan">立即体验</span>
                     <img src="img/jiantou.png">
                 </a>
@@ -161,19 +161,19 @@
         </div>
 
         <div class="iconInner">
-            <a href=""><img src="img/icon8.png"></a>
+            <a href="serveP.html#8"><img src="img/icon8.png"></a>
             <div class="iconWord1">情感分析</div>
             <div class="iconWord2">NLP为你提供真实有效的参考意见</div>
-            <div class="tiyanBox"><a href="">
+            <div class="tiyanBox"><a href="serveP.html#8">
                 <span class="tiyan">立即体验</span>
                 <img src="img/jiantou.png">
             </a></div>
         </div>
         <div class="iconInner">
-            <a href=""><img src="img/icon9.png"></a>
+            <a href="serveP.html#9"><img src="img/icon9.png"></a>
             <div class="iconWord1">网页正文抽取</div>
             <div class="iconWord2">自动获取网页正文</div>
-            <div class="tiyanBox"><a href="">
+            <div class="tiyanBox"><a href="serveP.html#9">
                 <span class="tiyan">立即体验</span>
                 <img src="img/jiantou.png">
             </a></div>
@@ -181,10 +181,10 @@
     </div>
     <div class="iconBox">
         <div class="iconInner">
-            <a href=""><img src="img/icon10.png"></a>
+            <a href="serveP.html#10"><img src="img/icon10.png"></a>
             <div class="iconWord1">内容流推荐引擎</div>
             <div class="iconWord2">打造个性化资讯阅读应用</div>
-            <div class="tiyanBox"><a href="">
+            <div class="tiyanBox"><a href="serveP.html#10">
                 <span class="tiyan">立即体验</span>
                 <img src="img/jiantou.png">
             </a></div>
