change index text

--- a/public/indexP.html
+++ b/public/indexP.html
@@ -27,7 +27,7 @@
                 <img src="img/deep.png">
             </div>
             <div class="logoBox2">
-                <span>深源互动——人工智能你的商业外脑</span>
+                <span>深源互动－人工智能你的商业外脑</span>
             </div>
             
         </div>
