change phone text

--- a/public/indexP.html
+++ b/public/indexP.html
@@ -74,7 +74,7 @@
     <!--<div class="mainWord">深源互动平台是基于分布式计算的数据获取和数据分析平台，结合独特的语义分析技术, 一站式满足用户词性分析，实体识别，句子压缩，文章摘要</div>-->
     <!--<div class="mainWord" style="width:90%">提取，文本分类，文本聚类，情感分析，关键词提取等自然语言处理功能API，同时提供全网数据抓取，可定制数据抓取服务。用户能够基</div>-->
     <!--<div class="mainWord" style="width:85%">于本平台提供的API实现搜索、推荐、舆情分析、定向挖掘等高级应用，也能够与我们合作定制具有产品特色的语义分析解决方案。</div>-->
-    <p class="mainWord">无限想象&nbsp;&nbsp;多维推理&nbsp;&nbsp;深度交互</p>
+    <p class="mainWord">无限可能&nbsp;&nbsp;多维推理&nbsp;&nbsp;深度交互</p>
 
     <div class="iconBox">
         <div class="iconInner">
