--- a/public/indexQidian.html
+++ b/public/indexQidian.html
@@ -247,7 +247,7 @@
             <!--<span id = "up-icon" class = "icon-double-angle-up pull-up-icon">↑↑</span>-->
             <span id = "pullDown-msg" class = "pull-up-msg" style="display:block;text-align: center;width: 100%;">下拉加载更多</span>
         </div>
-        <ul class="mainBox">
+        <ul class="mainBox" style="background:red">
             <!--<a href=""><li>-->
             <!--<div class="imgbox">-->
             <!--<img src="">-->
