--- a/public/indexQidian.html
+++ b/public/indexQidian.html
@@ -245,7 +245,7 @@
     <div id="scroller1">
         <div id = "scroller-pullDown" style="position: fixed;top: -43px;left: 0;width: 100%">
             <!--<span id = "up-icon" class = "icon-double-angle-up pull-up-icon">↑↑</span>-->
-            <span id = "pullDown-msg" class = "pull-up-msg" style="display:block;text-align: center;width: 100%;">下拉加载更多</span>
+            <span id = "pullDown-msg" class = "pull-up-msg" style="display:block;text-align: center;width: 100%;color:blue">下拉加载更多</span>
         </div>
         <ul class="mainBox" style="background:red">
             <!--<a href=""><li>-->
