--- a/public/indexQidian.html
+++ b/public/indexQidian.html
@@ -247,7 +247,7 @@
             <!--<span id = "up-icon" class = "icon-double-angle-up pull-up-icon">↑↑</span>-->
             <span id = "pullDown-msg" class = "pull-up-msg" style="display:block;text-align: center;width: 100%;">下拉加载更多</span>
         </div>
-        <ul class="mainBox" style="background:red">
+        <ul class="mainBox">
             <!--<a href=""><li>-->
             <!--<div class="imgbox">-->
             <!--<img src="">-->
@@ -308,9 +308,9 @@
             <!--</div>-->
             <!--</li></a>-->
         </ul>
-        <div id = "scroller-pullUp" style="position: fixed;bottom: -43px;left: 0;width: 100%">
+        <div id = "scroller-pullUp" style="position: fixed;bottom: -13px;left: 0;width: 100%">
             <!--<span id = "up-icon" class = "icon-double-angle-up pull-up-icon">↑↑</span>-->
-            <span id = "pullUp-msg" class = "pull-up-msg" style="display:block;text-align: center;width: 100%;color:blue">上拉加载更多</span>
+            <span id = "pullUp-msg" class = "pull-up-msg" style="display:block;text-align: center;width: 100%;">上拉加载更多</span>
         </div>
     </div>
 </div>
