--- a/public/indexQidian.html
+++ b/public/indexQidian.html
@@ -118,7 +118,7 @@
 
             myScroll1.on("slideUp", function () {
                 if (this.maxScrollY - this.y > 40) {
-                     $("#scroller-pullUp").css("top",$(".mainBox").height()+43);
+                     // $("#scroller-pullUp").css("top",$(".mainBox").height()+43);
                     var ids=$(".border").attr("id");
                     var last=$(".last").html();
                     $(".last").remove();
@@ -310,7 +310,7 @@
             <!--</div>-->
             <!--</li></a>-->
         </ul>
-        <div id = "scroller-pullUp" style="position: fixed;top: 0px;left: 0;width: 100%">
+        <div id = "scroller-pullUp" style="position: fixed;bottom: -43px;left: 0;width: 100%">
             <!--<span id = "up-icon" class = "icon-double-angle-up pull-up-icon">↑↑</span>-->
             <span id = "pullUp-msg" class = "pull-up-msg" style="display:block;text-align: center;width: 100%;">上拉加载更多</span>
         </div>
