--- a/public/indexQidian.html
+++ b/public/indexQidian.html
@@ -77,6 +77,9 @@
         -o-text-size-adjust: none;
         text-size-adjust: none;
     }
+    #scroller-pullUp{
+        display: none;
+    }
 </style>
 <script>
     var is=0;
@@ -279,6 +282,7 @@
             <span id = "pullDown-msg" class = "pull-up-msg" style="display:block;text-align: center;width: 100%;">下拉加载更多</span>
         </div>
         <ul class="mainBox">
+            <span class="load">正在加载...</span>
             <!--<a href=""><li>-->
             <!--<div class="imgbox">-->
             <!--<img src="">-->
